--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 6ba87c27-a1f0-4702-9c4e-3cba6fbd7e93, sni: 67us01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-804.0KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇳🇱 荷兰-169.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇺🇸 美国-8.56MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.23MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 乌克兰-2.93MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 134.195.196.231, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇬🇧 英国-1.89MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
   - {name: 🇳🇱 荷兰-3.30MB/s(Youtube:不良林), server: 213.183.59.206, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
   - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
+      - 乌克兰-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
+      - 乌克兰-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
+      - 乌克兰-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
+      - 乌克兰-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
+      - 乌克兰-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
+      - 乌克兰-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.56MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
+      - 乌克兰-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
