--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-3.23MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 乌克兰-2.93MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇦 加拿大-1.32MB/s(Youtube:不良林), server: 134.195.196.231, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇬🇧 英国-1.89MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-10.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 134.195.196.231, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇳🇱 荷兰-3.30MB/s(Youtube:不良林), server: 213.183.59.206, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
-  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.20MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇨🇦 加拿大-1.47MB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇳🇱 荷兰-1.46MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇨🇳 台湾-1.48MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-953.6KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.36MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
-      - 乌克兰-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
-      - 乌克兰-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
-      - 乌克兰-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
-      - 乌克兰-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
-      - 乌克兰-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
-      - 乌克兰-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.23MB/s(Youtube:不良林)
-      - 乌克兰-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-281.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
