--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-992.7KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-273.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 134.195.196.231, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇳🇱 荷兰-1.46MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.52MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.14MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-953.6KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.36MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-992.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-992.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-992.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-992.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-992.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-992.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-992.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
