--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 134.195.196.231, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇳🇱 荷兰-1.46MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇸🇬 新加坡-3.52MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.59MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.14MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-953.6KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 乌克兰-1.68MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇺🇸 美国-157.8KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇳🇱 荷兰-1.02MB/s(Youtube:不良林), server: 213.183.59.214, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇨🇳 台湾-1.94MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.36MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 乌克兰-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 乌克兰-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,34 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 乌克兰-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 乌克兰-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 乌克兰-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 乌克兰-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.46MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-953.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 乌克兰-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-157.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
 rules:
